# obd-c

./: .clang-format  CMakeLists.txt  README.md
docs/images/: layout.drawio
src/: CMakeLists.txt
src/fakeelmcli/: CMakeLists.txt  main.cc
src/libobd/: CMakeLists.txt  elm_device.cc  elm_device.h  fakeelm.cc  fakeelm.h  faketransport.cc  faketransport.h  scanner.h  transport_bt_win32.cc  transport_bt_win32.h
tests/: CMakeLists.txt
tests/libobd/: CMakeLists.txt  fakeelm.cc
